feat: Now you can update Coordinador de actividades